added plan and user api
