# services/user/routes/userRoutes.js
@@ -1,9 +1,8 @@
 import { Router } from 'express';
-import { createUser, getUser, getUserById, updateUser, deleteUser } from '../controllers/userController.js';
+import { getUser, getUserById, updateUser, deleteUser } from '../controllers/userController.js';
 
 const router = Router();
 
-router.post('/', createUser); 
 router.get('/', getUser); 
 router.get('/:id', getUserById); 
 router.put('/:id', updateUser); 
